...
            <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/testProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
...
                android:layout_marginBottom="10dp"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/personalinfobtns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:padding="13dp"
                    android:text="UserInfo"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
...

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/testContact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Contact"
                            android:textSize="17sp"
                            android:fontFamily="@font/proximanovaregular"
                            android:textStyle="bold" />

                        <Space
                            android:layout_width="wrap_content"
...
