<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/icHome"
        android:icon="@drawable/ic_home"
        android:title="Home"
        />
    <item
        android:id="@+id/icJobs"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Jobs"
        />

    <item
        android:id="@+id/icProfile"
        android:icon="@drawable/ic_account"
        android:title="Profile"
        />
    <item
        android:id="@+id/icExtra"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="Extra"
        />




</menu>