<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <Button
        android:clickable="false"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/proximanovaregular"
        android:text="My Applied Jobs"
        android:textColor="#424242"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApplied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>